frontend/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: v1
kind: Service
metadata:
  name: jnp-frontend
spec:
  selector:
    app: jnp-frontend
  type: LoadBalancer    
  ports:
  - name: jnp-frontend
    protocol: TCP
    port: 80
    targetPort: 3000
